# GroupBot

./: .env  .gitignore  BotConfiguration.cs  CMakeLists.txt  Dockerfile  GroupBot.csproj  GroupBot.sln  Program.cs  README.md  compose.yaml  docker-compose.yml
Commands/: AddListCommand.cs  AddToListCommand.cs  ListCommand.cs  OpenListsCommand.cs  RemoveFromListCommand.cs  ShuffleListCommand.cs  SwapCommand.cs
GroupBot.Library/: GroupBot.Library.csproj
GroupBot.Library/src/Bot/: Bot.cs
GroupBot.Library/src/Commands/: AddAdminCommand.cs  AddListCommand.cs  HelpCommand.cs  ICommand.cs  ListCommand.cs  ListsCommand.cs  RemoveListCommand.cs  SiftCommand.cs  StartCommand.cs  SwapAcceptCommand.cs  SwapCommand.cs  SwapDeclineCommand.cs  ToEndCommand.cs  ValidatedMessage.cs
GroupBot.Library/src/Extensions/: ServiceCollectionExtension.cs
GroupBot.Program/: GroupBot.Program.csproj  Program.cs  admins.json
Lists/: ChatList.cs
Requests/: Request.cs
Shared/: Participants.cs
lib/: CMakeLists.txt
lib/command/: CMakeLists.txt  command.cpp  command.h
lib/database/: CMakeLists.txt  database.cpp  database.h
lib/groupbot/: CMakeLists.txt  groupbot.cpp  groupbot.h
src/Commands/: ICommand.cs  ListCommand.cs  ListsCommand.cs  OpenListsCommand.cs  RemoveListCommand.cs  StartCommand.cs  SwapCommand.cs  ToEndCommand.cs
src/GroupBot/: GroupBot.csproj  Program.cs
src/Requests/: RequestsContainer.cs
src/Services/: UpdateHandler.cs
src/Shared/: Participants.cs  Randomizer.cs
tests/GroupBot.Tests/: GroupBot.Tests.csproj  StartCommandTests.cs
(+71 files in other folders)
